STB-1731: Test Coverage fixes